[tool.poetry]
name = "mock-server"
version = "1.0.0"
description = "mock-server for front-end project"
authors = ["punkyoon <punkkid001@gmail.com>"]
license = "Unlicense"

[tool.poetry.dependencies]
python = "^3.6"
django = "^2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
