[tool.poetry]
name = "mock-server"
version = "1.0.0"
description = "mock-server for front-end project"
authors = ["punkyoon <punkkid001@gmail.com>"]
license = "Unlicense"

[tool.poetry.dependencies]
python = "^3.6"
django = "^2.2"
djangorestframework = "^3.9"
django-safedelete = "^0.5.1"
django-model-utils = "^3.1"
djangorestframework-serializer-extensions = "^1.0"
django-cors-headers = "^3.0"
Pillow = "^6.0"
djangorestframework_simplejwt = "^4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
